--- a/registration.html
+++ b/registration.html
@@ -54,8 +54,8 @@
       </fieldset>
 
       <div class="form-row">
-        <label for="t-shirt">Number of Players</label>
-        <select name="t-shirt" id="t-shirt">
+        <label for="players">Number of Players</label>
+        <select name="players" id="players">
           <option value="5">5 members</option>
           <option value="6">6 members</option>
         </select>
